--- a/blog/views/components/nav-setting.ejs
+++ b/blog/views/components/nav-setting.ejs
@@ -3,15 +3,15 @@
     <div class="ui floating dropdown button">
       <i class="icon bars"></i>
       <div class="menu">
-        <% if (user) {%>
-          <a href="/posts?author=<% user._id %>" class="item">个人主页</a>
+        <% if (user) { %>
+          <a class="item" href="/posts?author=<%= user._id %>">个人主页</a>
           <div class="divider"></div>
-          <a href="/posts/create" class="item">发表文章</a>
-          <a href="/signout" class="item">登出</a>
+          <a class="item" href="/posts/create">发表文章</a>
+          <a class="item" href="/signout">登出</a>
         <% } else { %>
-          <a href="/signin" class="item">登陆</a>
-          <a href="/signup">注册</a>
-        <%}%>
+          <a class="item" href="/signin">登录</a>
+          <a class="item" href="/signup">注册</a>
+        <% } %>
       </div>
     </div>
   </div>
